[package]
name = "BPressure"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
rayon = "1.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.5"
